<resources>
    <string name="app_name">Instamedz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email or Username </string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LogIn</string>
    <string name="Sign_Up">Signup</string>
    <string name="or_logIn_with">or Login with</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="About_Us_Content">We Specialize In Health  Business Needs.</string>
    <string name="About_Us_Description">We work towards your betterment and well being.
                                        Entrust us with your will and we will provide you
                                        the best. Instamedz is a group of professionals
                                        capable of uplifting your bussiness as well
                                        as health simultaneously to the next level.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Dashboard</string>
    <string name="menu_slideshow">Log Out</string>
    <string name="Heart_care_content">We work towards your betterment and well being.
                                        Entrust us with your will and we will provide you
                                        the best.</string>
    <string name="Health_care_content">We work towards your betterment and well being.
                                        Entrust us with your will and we will provide you
                                   the best.</string>

    <string name="Get_started">Get Started</string>

    <string name="Offline_doctors">Offline Doctors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>